--- a/Markov_chain/Markov_Chain.ipynb
+++ b/Markov_chain/Markov_Chain.ipynb
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1194506d8>]"
+       "[<matplotlib.lines.Line2D at 0x12051c748>]"
       ]
      },
      "execution_count": 2,
@@ -176,7 +176,7 @@
     "ani = animation.FuncAnimation(fig, animate, interval=50) \n",
     "from matplotlib.animation import FFMpegWriter\n",
     "writer = FFMpegWriter(fps=15, metadata=dict(artist='Me'), bitrate=18)\n",
-    "ani.save(\"MC_stationary.mp4\")\n"
+    "ani.save(\"MC1_stationary.mp4\")\n"
    ]
   },
   {
