--- a/Markov_chain/Markov_Chain.ipynb
+++ b/Markov_chain/Markov_Chain.ipynb
@@ -23,7 +23,7 @@
     "Here, I make a small Markov chain example with 4 states:\n",
     "\n",
     "\n",
-    "<img src=\"MC_plot.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
+    "<img src=\"graph_draw.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
     "\n",
     "Now, for this chain we need to write the transition probability matrix; so that all the connections between different states will be shown as elements of matrix. The summation of all elements in each row is 1. \n",
     "\n",
