--- a/Markov_chain/Markov_Chain.ipynb
+++ b/Markov_chain/Markov_Chain.ipynb
@@ -54,7 +54,9 @@
     "\n",
     "<font color='green'> Next we want to see if we run the chain for long time will it converge to some limiting distribuition? Yes! under some conditions there exsists a unique stationary distribution. </font>\n",
     "\n",
-    "We introduce a stationary state $\\vec S$ which is defined as: $\\vec S Q = \\vec S$"
+    "We introduce a stationary state $\\vec S$ which is defined as: $\\vec S Q = \\vec S$\n",
+    "\n",
+    " "
    ]
   },
   {
@@ -178,6 +180,53 @@
     "writer = FFMpegWriter(fps=15, metadata=dict(artist='Me'), bitrate=18)\n",
     "ani.save(\"MC1_stationary.mp4\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='blue'>As seen in the above example, the chain after few iterations converges to the stationary state. We want to see how the stationary state works excatly and how we can compute it </font>.\n",
+    "\n",
+    "We are introducing some properties for the markov chain graphs. For this look at 4 different simple graphs:\n",
+    "\n",
+    "<img src=\"graph_all_cases.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "1) Irreducable: If a graph is irreducable it means from any state you can go to any state! In the above graphs number 1 and 4 are irreducable. While you can see that number 2 and 3 are not. In graph 2 if you get to state 4 you cannot go to state 3 (at any time in future) and in graph 3 if you get to state 1, you will be stuck there forever! One solution is to devide reducable graphs to irreducable ones, you can deal with this problem!\n",
+    "\n",
+    "2) Recurrent: A state in a chain is recurrent if there is 100% chance to (eventually) return to that state. All states in graph 1 are recurrent! But, if you look at graph 3, you can start at state 2, and for a while go back and forth to state 3, but eventually you will go to state 1, and be trapped there (state 1 is called absorbing state), so no state in graph 3 is recurrent. In the graph number 2: If we start at state 1 we will eventually get back to that state so the state is recurrent (all states in this graph are recurrent)\n",
+    "\n",
+    "3) Periodic: This is the case for graph number 4. This is not we like because we can predict easily when we will be back at each state! \n",
+    "\n",
+    "Now lets get back to the stationary state discussion which had earlier: a stationary state $\\vec S$ which is defined as: $\\vec S Q = \\vec S$. This is is eigen state, eigen value problem! The question is that if there exsists a unique solution to this eigen value problem. It turns out that for any <font color='green'>irreducable </font> Markov chain that has no periodicity there exists a unique stationary state ($P({X}_n = i) \\rightarrow {S}_i$ as $ n \\rightarrow \\infty$). \n",
+    "This means that independednt of the state we started the Markov chain at, as long as the chain is irredicable and non periodic, <font color='green'> evetually will converge to a stationary state </font>.\n",
+    "    \n",
+    "Now the question is how to compute the stationary state? (We know it exsists but how to compute it??) Computing stationary state is easier if the graph is <font color='green'> reversible </font>. A reversible (time reversible) graph is defined as:\n",
+    "\\begin{equation*}\n",
+    "S_i q_{ij} = S_j q_{ji}\n",
+    "\\end{equation*}\n",
+    "Where $q_{ji}$ is the elements of the transition matrix. If you find such vector $\\vec S$ this vetor is the stationary state! Here is the proof for it:\n",
+    "At first we use a summation operator and sum up over all $i$ indices.\n",
+    "\\begin{equation*}\n",
+    "\\sum_i S_i q_{ij} =\\sum_i S_j q_{ji}\n",
+    "\\end{equation*}\n",
+    "The right hand side of the equation can be written as: $\\sum_i S_j q_{ji} = S_j \\sum_i  q_{ji}$ (because $S_j$ does not depend on $i$).\n",
+    "As, the $q_{ji}$ is the elements of $Q$ the summation of each rows of the matrix is 1! So that:\n",
+    "\\begin{equation*}\n",
+    "S_i q_{ij} = S_j \n",
+    "\\end{equation*}\n",
+    "Which this is the definition of matrix multiplication and can be written as: $\\vec S Q = \\vec S$ \n",
+    "<font color='green'> One popular reversible markov chains are Random walks on an undirected graphs </font>. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
