--- a/Markov_chain/Metropolis_Hasting_explanation_and_example.ipynb
+++ b/Markov_chain/Metropolis_Hasting_explanation_and_example.ipynb
@@ -39,10 +39,27 @@
     "\n",
     "$\\sum_x \\pi(x) T(x \\rightarrow x') = \\pi(x')$\n",
     "\n",
-    "***Now lets get back to our problem, we are looking for a critic such that the MC created by it will produce samples from a stattionary dist. $\\pi(x)$***\n",
+    "***Now lets get back to our problem, we are looking for a critic such that the MC created by it will produce samples from a stationary dist. $\\pi(x)$***\n",
     "***So we check for a critic A such that it makes a transition matrix T that satisfies stationary state equation of the form:***\n",
     "\n",
     "$\\pi(x) T(x \\rightarrow x') = \\pi(x') T(x' \\rightarrow x)$\n",
+    "\n",
+    "This equation can be re-written as follows:\n",
+    "\n",
+    "$\\pi(x) Q(x \\rightarrow x') A(x \\rightarrow x') = \\pi(x') Q(x' \\rightarrow x) A(x' \\rightarrow x)$ which can be re_arranges as follows:\n",
+    "\n",
+    "$\\frac{A(x \\rightarrow x')}{A(x' \\rightarrow x)} = \\frac{\\pi(x') Q(x' \\rightarrow x)}{\\pi(x) Q(x \\rightarrow x')}$\n",
+    "\n",
+    "Doing a bit of algebra we can show:\n",
+    "\n",
+    "$A(x \\rightarrow x') = min (1, \\frac{\\pi(x') Q(x' \\rightarrow x)}{\\pi(x) Q(x \\rightarrow x')})$\n",
+    "\n",
+    "*** To summerize the whole thing:***\n",
+    "\n",
+    "For $k = 1, 2, 3, ...$ we cample from any (wrong) $Q(x^k \\rightarrow x')$ and we accept the x' with probability $A(x \\rightarrow x')$.  \n",
+    "\n",
+    "***This method is VERY usefull when we dont know the normalization constant of our posterior dist. ***\n",
+    "\n",
     "\n",
     "\n",
     "\n"
